Bug 279638 - Walk Through Desktop List no longer working
Summary: Walk Through Desktop List no longer working
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-08 08:38 UTC by Jonathan Marten
Modified: 2011-09-10 10:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2011-08-08 08:38:00 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The Walk Through Desktop List and its corresponding Reverse action no longer appear to be working correctly.  In System Settings - Common Appearance and Behaviour - Shortcuts and Gestures - Global keyboard Shortcuts, Walk Through Desktops is assigned to Ctrl+Tab and Walk Through Desktops (Reverse) is assigned to Ctrl+Shift+Tab.

Firstly, these keyboard shortcuts do not appear to be active on startup (KDE login).  Pressing either of them does nothing.  To get them to work it is necessary to go to System Settings as above, clear the shortcut, Apply the settings, set the custom shortcut, then Apply again, for each of the 2 shortcuts.

Secondly, once made to work as above pressing Ctrl-Tab displays the desktop list, and subsequent presses of Tab with Ctrl held highlight each desktop preview in turn (I have 4).  But releasing Ctrl does not switch to the highlighted desktop, the original desktop remains.

This seems to have started happening within about the last 2-3 weeks or so, and is still present in trunk as of today.


Reproducible: Always

Steps to Reproduce:
Set up shortcut keys and attempt to perform actions as above.


Actual Results:  
The shortcut keys are not noticed upon first login.

When the settings are changed and reverted, the keys are acted upon but the desktop is not switched.


Expected Results:  
Keys should be active at login, and should switch desktop on release.


Compositing:        active (OpenGL)
Multiple monitors:  no
Graphics driver:    NVidia 275.09.07

kdelibs:            v4.4.85-4116-g0cb43a7
kdeworkspace:       v4.5.95-2389-g359933e
Comment 1 Jonathan Marten 2011-09-10 10:41:46 UTC
Git commit 4f30f53cfa3ba2ad1cacf5e89579903bdd80049f by Jonathan Marten.
Committed on 10/09/2011 at 12:39.
Pushed by marten into branch 'master'.

Make the Walk Through Desktop List and Reverse actions work again

With a comment to explain the non-obvious global shortcut setting.

BUG:279638
REVIEW:102558

M  +8    -2    kwin/tabbox/tabbox.cpp

http://commits.kde.org/kde-workspace/4f30f53cfa3ba2ad1cacf5e89579903bdd80049f