Make the Walk Through Desktop List and Reverse actions work again

With a comment to explain the non-obvious global shortcut setting.

BUG:279638
REVIEW:102558